add contact detials

--- a/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
@@ -38,7 +38,7 @@ Contact.initMap();
             </div><!---/map-->
             <!-- End Google Map -->
 
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
+            <p>Nestled on leafy Kellett Street in Potts Point, Café Boheme serves chic French cuisine.  With a focus on organic and local produce, Owner Chef Darren Taylor brings his Cordon Bleu talents to the edgy precinct, offering an array of house-made fare to enjoy at the café or at home. </p>
             <form>
                 <label>Name</label>
                 <div class="row margin-bottom-20">
@@ -69,29 +69,25 @@ Contact.initMap();
             <!-- Contacts -->
             <div class="headline"><h2>Contacts</h2></div>
             <ul class="list-unstyled who margin-bottom-30">
-                <li><a href="#"><i class="icon-home"></i>5 Kellet Streat, Potts Point </a></li>
+                <li><a href="#"><i class="icon-home"></i>3 Kellet Streat, Potts Point </a></li>
                 <li><a href="#"><i class="icon-envelope-alt"></i>info@cafeboheme.com.au</a></li>
-                <li><a href="#"><i class="icon-phone-sign"></i>+61 2 9999 9999</a></li>
+                <li><a href="#"><i class="icon-phone-sign"></i>+61 2 9331 0102</a></li>
                 <li><a href="#"><i class="icon-globe"></i>http://www.cafeboheme.com.au</a></li>
             </ul>
 
             <!-- Business Hours -->
             <div class="headline"><h2>Business Hours</h2></div>
             <ul class="list-unstyled margin-bottom-30">
-                <li><strong>Monday-Friday:</strong> 10am to 8pm</li>
-                <li><strong>Saturday:</strong> 7am to 3pm</li>
-                <li><strong>Saturday:</strong> 8am to 3pm</li>
-                <li><strong>Tuesday:</strong> Closed</li>
+                <li><strong>Wed/Thurs:</strong> 5pm to late</li>
+                <li><strong>Friday:</strong> 12pm to late, lunch/dinner</li>
+                <li><strong>Saturday:</strong> 8am to late, all day breakfast/lunch/dinner</li>
+                <li><strong>Sunday:</strong> 8am to 4pm, all day breakfast/lunch</li>
+                <li><strong>Monday-Tuesday:</strong> Closed</li>
             </ul>
 
             <!-- Why we are? -->
-            <div class="headline"><h2>Why we are?</h2></div>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
-            <ul class="list-unstyled">
-                <li><i class="icon-ok color-green"></i> Odio dignissimos ducimus</li>
-                <li><i class="icon-ok color-green"></i> Blanditiis praesentium volup</li>
-                <li><i class="icon-ok color-green"></i> Eos et accusamus</li>
-            </ul>
+            <div class="headline"><h2>Café Boheme</h2></div>
+            <p> is the new addition to the Potts Point neighbourhood, making an urban Parisian style splash. </p><br />
         </div><!--/col-md-3-->
     </div><!--/row-->
 
