add contact detials

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -159,7 +159,7 @@
             <div class="col-md-4 md-margin-bottom-40">
                 <!-- About -->
                 <div class="headline"><h2>About</h2></div>
-                <p class="margin-bottom-25 md-margin-bottom-40">Who is Cafe Boheme.</p>
+                <p class="margin-bottom-25 md-margin-bottom-40">We want Café Boheme to feel like the perfect escape for our patrons. The sun-speckled front courtyard, coupled with the leafy surrounds of Kellett Street, creates a haven for the perfect morning coffee, a relaxed lunch or Sunday breakfast.  We look forward to giving Potts Point something new, and bringing the wonderful flavours of urban France to the locals.”.</p>
                 <!-- Monthly Newsletter -->
                 <div class="headline"><h2>Monthly Newsletter</h2></div>
                 <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
@@ -180,10 +180,9 @@
                 <!-- Contact Us-->
                 <div class="headline"><h2>Contact Us</h2></div>
                 <address class="md-margin-bottom-40">
-                    5 Kellet Street <br />
+                    3 Kellet Street <br />
                     Potts Point, NSW  <br />
-                    Phone: 800 123 3456 <br />
-                    Fax: 800 123 3456 <br />
+                    Phone: 02 9331 0102 <br />
                     Email: <a href="mailto:info@cafeboheme.com.au" class="">info@cafeboheme.com.au</a>
                 </address>
                 <!-- Stay Connected -->
