- on the homepage, accompanying Recent Photos: please delete dummy copy. - on the contact page, in the address: please change Streat to Street - in Stay Connected, please delete Twitter and Google+, and replace with icons and links to the Facebook page and Instagram account. (I think I have emailed these to you before but please don't hesitate if you would like me to send the links again.) - About paragraph: delete the quotation mark at the end of the copy

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -159,7 +159,7 @@
             <div class="col-md-4 md-margin-bottom-40">
                 <!-- About -->
                 <div class="headline"><h2>About</h2></div>
-                <p class="margin-bottom-25 md-margin-bottom-40">We want Café Boheme to feel like the perfect escape for our patrons. The sun-speckled front courtyard, coupled with the leafy surrounds of Kellett Street, creates a haven for the perfect morning coffee, a relaxed lunch or Sunday breakfast.  We look forward to giving Potts Point something new, and bringing the wonderful flavours of urban France to the locals.”.</p>
+                <p class="margin-bottom-25 md-margin-bottom-40">We want Café Boheme to feel like the perfect escape for our patrons. The sun-speckled front courtyard, coupled with the leafy surrounds of Kellett Street, creates a haven for the perfect morning coffee, a relaxed lunch or Sunday breakfast.  We look forward to giving Potts Point something new, and bringing the wonderful flavours of urban France to the locals.</p>
                 <!-- Monthly Newsletter -->
                 <div class="headline"><h2>Monthly Newsletter</h2></div>
                 <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
@@ -188,9 +188,9 @@
                 <!-- Stay Connected -->
                 <div class="headline"><h2>Stay Connected</h2></div>
                 <ul class="social-icons">
-                    <li><a href="#" data-original-title="Facebook" class="social_facebook"></a></li>
-                    <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>
-                    <li><a href="#" data-original-title="Goole Plus" class="social_googleplus"></a></li>
+                    <li><a href="http://facebook.com/cafeboheme" target="_blank" data-original-title="Facebook" class="social_facebook"></a></li>
+{#                    <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>#}
+{#                    <li><a href="#" data-original-title="Google Plus" class="social_googleplus"></a></li>#}
                 </ul>
             </div><!--/col-md-4-->
         </div><!--/row-->
