--- a/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
@@ -69,7 +69,7 @@ Contact.initMap();
             <!-- Contacts -->
             <div class="headline"><h2>Contacts</h2></div>
             <ul class="list-unstyled who margin-bottom-30">
-                <li><a href="#"><i class="icon-home"></i>3 Kellet Streat, Potts Point </a></li>
+                <li><a href="#"><i class="icon-home"></i>3 Kellet Street, Potts Point </a></li>
                 <li><a href="#"><i class="icon-envelope-alt"></i>info@cafeboheme.com.au</a></li>
                 <li><a href="#"><i class="icon-phone-sign"></i>+61 2 9331 0102</a></li>
                 <li><a href="#"><i class="icon-globe"></i>http://www.cafeboheme.com.au</a></li>
